# LoRaPaws32

./: .clang-format  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  PLAN.md  PROGRESS.md  README.md  build.rs  clone-all.sh  esp32-tracker.code-workspace
.agents/guides/: build.md  documentation.md  ide-setup.md  testing.md
.agents/rules/: markdown.md  workflow.md
.cargo/: config.toml
.clangd/: config.yaml
.devcontainer/: devcontainer.json
.github/: BRANCH_RULES.md  CODEOWNERS  CODEQL_SUPPRESSIONS.md
.github/workflows/: ci.yml  opencode-comment.yml  opencode.yml  pr_agent.yml  pr_reviewer.yml  todo.yml
.opencode/: opencode.json
base_station/: mqtt_client.py
docs/firmware/: STATE_MACHINE.md  TESTING_STRATEGY.md
docs/hardware/: DESIGN.md  PLAN.md
firmware/: build.sh
firmware/components/test/: CMakeLists.txt  test_drivers.cpp
firmware/main/: CMakeLists.txt  accelerometer.cpp  accelerometer.hpp  battery.hpp  ble.cpp  ble.hpp  board_config.h  geofence.cpp  geofence.hpp  gps.cpp  gps.hpp  led_driver.cpp  main.cpp  nmea_parser.hpp  state_machine.cpp  state_machine.hpp
firmware/tests/: CMakeLists.txt  test_button_handler.cpp  test_geofence.cpp  test_led_driver.cpp
firmware/tests/include/driver/: gpio.h
firmware/tests/include/freertos/: event_groups.h
firmware/tests/src/: event_groups_mock.cpp  gpio_mock.cpp
hardware/: build_pcb.py
hardware/tracker/: PIN_MAPPING.md  tracker.kicad_pcb  tracker.kicad_prl  tracker.kicad_pro
src/: main.rs
(+3 files in other folders)
